# project

./: Rapport_Projet_EL_MEHDI_ES-SAKHI.docx  pyproject.toml
Partie III– RNN, LSTM, GRU et Seq2Seq/: RNN-LSTM-GRU.ipynb  Sentiment Analysis Embeddings Averaging.ipynb  Sentiment Analysis LSTM.ipynb
Partie II– CNN/: Fashion-MNIST.ipynb  mnist.ipynb
Partie I– MLP/: mlp.ipynb  test.ipynb
